Adding env variables for tests